// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MagellanAI's install destination action: all fields 1`] = `
Object {
  "aifa": "@m[(r7Yt",
  "andi": "@m[(r7Yt",
  "app": "@m[(r7Yt",
  "host": "@m[(r7Yt",
  "idfa": "@m[(r7Yt",
  "idfv": "@m[(r7Yt",
  "ip": "53.218.42.250",
  "plat": "@m[(r7Yt",
  "token": "@m[(r7Yt",
  "ts": "@m[(r7Yt",
  "ua": "@m[(r7Yt",
}
`;

exports[`Testing snapshot for MagellanAI's install destination action: required fields 1`] = `
Object {
  "app": "@m[(r7Yt",
  "host": "@m[(r7Yt",
  "idfa": "@m[(r7Yt",
  "idfv": "@m[(r7Yt",
  "ip": "53.218.42.250",
  "plat": "@m[(r7Yt",
  "token": "@m[(r7Yt",
  "ts": "@m[(r7Yt",
  "ua": "@m[(r7Yt",
}
`;
